# pavbot_sim_gz

./: CMakeLists.txt  README.md  package.xml
launch/: pavbot_lane_sim.launch.py  sim_bringup.launch.py
models/pavbot_test/: model.config  model.sdf
models/pothole/: model.config  model.sdf
worlds/: pavbot_test_world.sdf  pavbot_test_world_oval.sdf
